--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.1",
     "mongoose": "^8.10.0",
     "next": "14.2.23",
     "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
