--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.475.0",
     "mongoose": "^8.10.0",
     "next": "14.2.23",
     "next-auth": "^4.24.11",
