--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "antd": "^5.23.4",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
